app/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import '~antd/dist/antd.dark.css';

@import url('https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap');

#__next {
  height: 100%;
}

.ant-layout {
  height: 100%;
  /* global background color - we should probably change the theme instead of doing this manually */
  background-color: #1f1f1f;
}

/* alignment fixes - TODO: find out why they even happen */
.ant-table-column-sorters {
  line-height: 1 !important;
}
.ant-input-search-button {
  line-height: 0.8 !important;
}
.ant-page-header-back {
  line-height: 0.5 !important;
}
.ant-drawer-close {
  line-height: 0.5 !important;
}
.ant-btn {
  line-height: 0.5 !important;
}
.ant-pagination-item-link {
  line-height: 0.8 !important;
}
.ant-btn > .anticon {
  line-height: 0 !important;
}

.dojo-info-card {
  height: 300px;
}

.dojo-discord-button {
  line-height: 1rem !important;
}

::-webkit-scrollbar {
    background-color: #202324;
    color: #aba499;
}

::-webkit-scrollbar-thumb {
    background-color: #454a4d;
}

::-webkit-scrollbar-thumb:hover {
    background-color: #575e62;
}

::-webkit-scrollbar-thumb:active {
    background-color: #484e51;
}

::-webkit-scrollbar-corner {
    background-color: #181a1b;
}

